--- a/frontend_2/src/assets/i18n/it.json
+++ b/frontend_2/src/assets/i18n/it.json
@@ -1,7 +1,7 @@
 {
   "general": {
-    "welcome": "Benvenuto sulla Dashboard di ACROSS!",
-    "logo_text": "ACROSS",
+    "welcome": "Benvenuto sulla Dashboard di DMM!",
+    "logo_text": "DMM",
     "home": "Home",
     "error": "Errore",
     "save": "Salva",
