--- a/frontend_2/src/assets/i18n/it.json
+++ b/frontend_2/src/assets/i18n/it.json
@@ -90,40 +90,9 @@
       "hide_error_details": "Nascondi dettagli errore"
     },
     "adapters": {
-      "next" : "Prosegui",
-      "adapter": "Adattatori",
-      "actions": "Azioni",
-      "description": "Descrizione",
-      "details": "Dettagli",
-      "status": "Stato",
       "name": "Nome",
       "adapterId": "ID adattatore",
-      "url": "Endpoint",
-      "type": "Tipo",
-      "add": "Aggiungi adattatore",
-      "confirm": "Conferma",
-      "edit": "Modifica",
-      "register": "Registra",
-      "delete": "Cencella",
-      "register_adapter": "Registrazione dell'adattatore",
-      "register_adapter_message": "Sei sicuro di registrare e attivare l'adattatore <strong>{{adapterName}}</strong><br>Una volta registrato, non sarai in grado di modificarlo fino a quando non lo avrai prima disabilitato.",
-      "adapter_deleted_message": "L'adattatore {{adapterName}} è stato eliminato correttamente!",
-      "adapter_registered_message": "L'adattatore {{adapterName}} è stato registrato correttamente!",
-      "adapter_deregistered_message": "L'adattatore {{adapterName}} è stato disabilitato correttamente!",
-      "deregister": "Disabilita",
-      "deregister_adapter": "Disabilita adattatore",
-      "deregister_adapter_message": "Sei sicuro di voler disabilitare l'adattatore <strong>{{adapterName}}</strong>?\n",
-      "delete_adapter_message": "Sei sicuro di eliminare definitivamente l'adattatore <strong>{{adapterName}}</strong>?\n",
-      "delete_adapter": "Cancella adattatori",
-      "logs": "Log di adattatori",
-      "adapter_added_message": "E' stato aggiunto un nuovo adattatore",
-      "adapter_edited_message": "L'adattatore è stato modificato",
-      "validationErrors": "Ci sono degli errori di validazione nella descrizione dell'adapter inserito.",
-      "context": "Contesto",
-      "mapper": "Mappatore",
-      "adapter_model": "Modello adapter",
-      "load_mapper_list": "Carica lista mapper",
-      "source_data_type": "Tipo di dato in ingresso"
+      "validationErrors": "Ci sono degli errori di validazione nella descrizione dell'adapter inserito."
     },
     "dmm": {
       "preview": "Anteprima",
