--- a/frontend_2/src/assets/i18n/en.json
+++ b/frontend_2/src/assets/i18n/en.json
@@ -90,40 +90,9 @@
       "hide_error_details": "Hide error details"
     },
     "adapters": {
-      "next" : "Next",
-      "adapter": "Adapter",
-      "actions": "Actions",
-      "description": "Description",
-      "details": "Details",
-      "status": "Status",
       "name": "Name",
       "adapterId": "Adapter ID",
-      "url": "Url",
-      "type": "Type",
-      "add": "Add adapter",
-      "confirm": "Confirm",
-      "edit": "Edit adapter",
-      "register": "Register",
-      "delete": "Delete",
-      "register_adapter": "Adapter Registration",
-      "register_adapter_message": "Are you sure to register and activate the adapter <strong>{{adapterName}}</strong><br>Once registered, you will not be able to edit it until you disabled it first.",
-      "adapter_deleted_message": "Adapter {{adapterName}} deleted successfully!",
-      "adapter_registered_message": "Adapter {{adapterName}} registered successfully!",
-      "adapter_deregistered_message": "Adapter {{adapterName}} disabled successfully!",
-      "deregister": "Disable",
-      "deregister_adapter": "Disable adapter",
-      "deregister_adapter_message": "Are you sure you want to disable adapter <strong>{{adapterName}}</strong>?\n",
-      "delete_adapter_message": "Are you sure to delete permanently the adapter <strong>{{adapterName}}</strong>?\n",
-      "delete_adapter": "Delete adapter",
-      "logs": "Adapter logs",
-      "adapter_added_message": "A new adapter was added",
-      "adapter_edited_message": "Adapter was edited",
-      "validationErrors": "There are validation errors in the Adapter description.",
-      "context": "Context",
-      "mapper": "Mapper",
-      "adapter_model": "Adapter model",
-      "load_mapper_list": "Load mapper list",
-      "source_data_type": "Source Data Type"
+      "validationErrors": "There are validation errors in the Adapter description."
     },
     "dmm" : {
       "preview" : "Preview",
