--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -8,7 +8,7 @@
     "edit": "Edit",
     "errors": "Some errors occurred.",
     "menu": {
-      "dashboard": "Dashboard"
+      "home": "Home"
     },
     "account": {
       "roles": "Your Roles",
