--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -8,7 +8,7 @@
     "edit": "Modifica",
     "errors": "Si sono verificati degli errori.",
     "menu": {
-      "dashboard": "Cruscotto"
+      "home": "Home"
     },
     "account": {
       "roles": "I tuoi ruoli",
