--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -89,7 +89,8 @@
       "validationErrors": "Ci sono degli errori di validazione nella descrizione inserita.",
       "path": "Posizione",
       "show_error_details": "Mostra dettagli errore",
-      "hide_error_details": "Nascondi dettagli errore"
+      "hide_error_details": "Nascondi dettagli errore",
+      "delete":"Cancella"
     },
     "adapters": {
       "name": "Nome",
@@ -112,16 +113,22 @@
       "map": "Mappa",
       "back": "Indietro",
       "reset": "Reset",
-      "add": "Aggiungi adattatore",
-      "edit": "Modifica adattatore",
+      "add": "Aggiungi record",
+      "edit": "Modifica record",
       "mapId": "ID map",
-      "map_added_message": "E' stata aggiunto un nuova adattatore",
-      "map_edited_message": "L' adattatore è stato modificato con successo",
+      "map_added_message": "E' stata aggiunto un nuova record",
+      "map_edited_message": "Il record è stato modificato con successo",
       "confirmSave": "Salva",
       "confirmEdit": "Modifica",
       "save_as_new": "Salva come nuovo",
       "export": "Scarica",
-      "confirm": "Conferma"
+      "confirm": "Conferma",
+      "register_message": "Sicuro di voler attivare il record? <br>Una volta registrato, non potrai modificarlo se non dopo averlo disabilitato.",
+      "deregister_message": "Sei sicuro di voler disabilitare il record?\n",
+      "delete_message": "Sei sicuro di voler cancellare permanentemente il record?\n",
+      "record_deleted_message": "Il record è stato cancellato correttamente!",
+      "record_registered_message": "Il record è stato registrato correttamente!",
+      "record_deregistered_message": "Il record è stato disabilitato correttamente!"
     }
   },
   "login": {
