--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -128,7 +128,12 @@
       "delete_message": "Sei sicuro di voler cancellare permanentemente il record?\n",
       "record_deleted_message": "Il record è stato cancellato correttamente!",
       "record_registered_message": "Il record è stato registrato correttamente!",
-      "record_deregistered_message": "Il record è stato disabilitato correttamente!"
+      "record_deregistered_message": "Il record è stato disabilitato correttamente!",
+      "info" : "Info",
+      "id" : "ID",
+      "name" : "Nome",
+      "dataModel" : "Data model",
+      "view_editor" : "Vedi nell'editor"
     }
   },
   "login": {
