add status and description

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -95,6 +95,8 @@
     "adapters": {
       "name": "Name",
       "adapterId": "Adapter ID",
+      "status" : "Status",
+      "description" : "Description",
       "validationErrors": "There are validation errors in the Adapter description."
     },
     "dmm" : {
