--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -95,6 +95,8 @@
     "adapters": {
       "name": "Nome",
       "adapterId": "ID adattatore",
+      "status" : "Stato",
+      "description" : "Descrizione",
       "validationErrors": "Ci sono degli errori di validazione nella descrizione dell'adapter inserito."
     },
     "dmm": {
