--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -100,6 +100,7 @@
       "validationErrors": "There are validation errors in the Adapter description."
     },
     "dmm" : {
+      "mode" : "Mode",
       "save_schema" : "Save schema",
       "create_new" : "Create new",
       "register" : "Register",
