--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -100,6 +100,7 @@
       "validationErrors": "Ci sono degli errori di validazione nella descrizione dell'adapter inserito."
     },
     "dmm": {
+      "transform" : "Trasforma",
       "mode" : "Modalità",
       "save_schema" : "Salva schema",
       "create_new" : "Crea nuovo",
