--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -105,6 +105,9 @@
       "transform" : "Transform",
       "mode" : "Mode",
       "save_schema" : "Save schema",
+      "save_source" : "Save source",
+      "update_schema" : "Update schema",
+      "update_source" : "Update source",
       "create_new" : "Create new",
       "register" : "Register",
       "deregister": "Deregister",
