--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -105,6 +105,9 @@
       "transform" : "Trasforma",
       "mode" : "Modalità",
       "save_schema" : "Salva schema",
+      "save_source" : "Salva sorgente",
+      "update_schema" : "Aggiorna schema",
+      "update_source" : "Aggiorna sorgente",
       "create_new" : "Crea nuovo",
       "register" : "Registra",
       "deregister": "Deregistra",
