--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -81,6 +81,7 @@
     },
     "editor": {
       "confirm_mapping": "Confirm mapping",
+      "confirm_source": "Confirm source",
       "import": "Import",
       "update": "Update",
       "export": "Export",
