--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -81,6 +81,7 @@
     },
     "editor": {
       "confirm_mapping": "Conferma mapping",
+      "confirm_source": "Conferma sorgente",
       "import": "Importa",
       "update": "Aggiorna",
       "export": "Esporta",
