--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -9,7 +9,7 @@
     "errors": "Si sono verificati degli errori.",
     "menu": {
       "home": "Home",
-      "editor": "Editor",
+      "editor": "Mapper editor",
       "map_records": "File di mapping registrati"
     },
     "account": {
