--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -119,8 +119,8 @@
       "details" : "Dettagli",
       "status" : "Stato",
       "actions" : "Azioni",
-      "add_record": "Aggiungi record",
-      "record": "Record",
+      "add_record": "Aggiungi mapper",
+      "record": "Mapper",
       "description": "Descrizione",
       "preview": "Anteprima",
       "clear_filters": "Cancella filtri",
@@ -128,22 +128,22 @@
       "map": "Mappa",
       "back": "Indietro",
       "reset": "Reset",
-      "add": "Aggiungi record",
-      "edit": "Modifica record",
+      "add": "Aggiungi mapper",
+      "edit": "Modifica mapper",
       "mapId": "ID map",
-      "map_added_message": "E' stata aggiunto un nuova record",
-      "map_edited_message": "Il record è stato modificato con successo",
+      "map_added_message": "E' stata aggiunto un nuovo mapper",
+      "map_edited_message": "Il mapper è stato modificato con successo",
       "confirmSave": "Salva",
       "confirmEdit": "Modifica",
       "save_as_new": "Salva come nuovo",
       "export": "Scarica",
       "confirm": "Conferma",
-      "register_message": "Sicuro di voler attivare il record? <br>Una volta registrato, non potrai modificarlo se non dopo averlo disabilitato.",
-      "deregister_message": "Sei sicuro di voler disabilitare il record?\n",
-      "delete_message": "Sei sicuro di voler cancellare permanentemente il record?\n",
-      "record_deleted_message": "Il record è stato cancellato correttamente!",
-      "record_registered_message": "Il record è stato registrato correttamente!",
-      "record_deregistered_message": "Il record è stato disabilitato correttamente!",
+      "register_message": "Sicuro di voler attivare il mapper? <br>Una volta registrato, non potrai modificarlo se non dopo averlo disabilitato.",
+      "deregister_message": "Sei sicuro di voler disabilitare il mapper?\n",
+      "delete_message": "Sei sicuro di voler cancellare permanentemente il mapper?\n",
+      "record_deleted_message": "Il mapper è stato cancellato correttamente!",
+      "record_registered_message": "Il mapper è stato registrato correttamente!",
+      "record_deregistered_message": "Il mapper è stato disabilitato correttamente!",
       "info" : "Info",
       "id" : "ID",
       "name" : "Nome",
