--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -10,7 +10,7 @@
     "menu": {
       "home": "Home",
       "editor": "Mapper editor",
-      "map_records" : "Map records"
+      "map_records" : "Mapper records"
     },
     "account": {
       "roles": "Your Roles",
@@ -101,7 +101,7 @@
       "adapterId": "Adapter ID",
       "status" : "Status",
       "description" : "Description",
-      "validationErrors": "There are validation errors in the Record description."
+      "validationErrors": "There are validation errors in the mapper description."
     },
     "dmm" : {
       "reset_config" : "Reset config",
@@ -119,8 +119,8 @@
       "details" : "Details",
       "status" : "Status",
       "actions" : "Actions",
-      "add_record": "Add record",
-      "record" : "Record",
+      "add_record": "Add mapper",
+      "record" : "Mapper",
       "description" : "Description",
       "clear_filters": "Clear filters",
       "preview" : "Preview",
@@ -128,22 +128,22 @@
       "map" : "Map",
       "back" : "Back",
       "reset" : "Reset",
-      "add" : "Save record",
-      "edit" : "Edit record",
+      "add" : "Save mapper",
+      "edit" : "Edit mapper",
       "mapId" : "Map ID",
-      "map_added_message": "A new record was added",
-      "map_edited_message": "Record was successfully modified",
+      "map_added_message": "A new mapper was added",
+      "map_edited_message": "Mapper was successfully modified",
       "confirmSave" : "Save",
       "confirmEdit" : "Update",
       "save_as_new" : "Save as new",
       "export" : "Download",
       "confirm" : "Confirm",
-      "register_message": "Are you sure to register and activate the record ?<br>Once registered, you will not be able to edit it until you disabled it first.",
-      "deregister_message": "Are you sure to disable the record ?\n",
-      "delete_message": "Are you sure to delete permanently the record ?\n",
-      "record_deleted_message": "Record deleted successfully!",
-      "record_registered_message": "Record registered successfully!",
-      "record_deregistered_message": "Record disabled successfully!",
+      "register_message": "Are you sure to register and activate the mapper ?<br>Once registered, you will not be able to edit it until you disabled it first.",
+      "deregister_message": "Are you sure to disable the mapper ?\n",
+      "delete_message": "Are you sure to delete permanently the mapper ?\n",
+      "record_deleted_message": "Mapper deleted successfully!",
+      "record_registered_message": "Mapper registered successfully!",
+      "record_deregistered_message": "Mapper disabled successfully!",
       "info" : "Info",
       "id" : "ID",
       "name" : "Name",
