request body accordion added

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -148,7 +148,8 @@
       "id" : "ID",
       "name" : "Name",
       "dataModel" : "Data model",
-      "view_editor" : "View on editor"
+      "view_editor" : "View on editor",
+      "update": "Update"
     }
   },
   "login": {
