--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -148,7 +148,8 @@
       "id" : "ID",
       "name" : "Nome",
       "dataModel" : "Data model",
-      "view_editor" : "Vedi nell'editor"
+      "view_editor" : "Vedi nell'editor",
+      "update": "Aggiorna"
     }
   },
   "login": {
