--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -7,6 +7,7 @@
     "cancel": "Annulla",
     "edit": "Modifica",
     "errors": "Si sono verificati degli errori.",
+    "welcome": "Benvenuto nel Data model mapper",
     "menu": {
       "home": "Home",
       "editor": "Mapper editor",
