--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -169,7 +169,7 @@
       "new_account_use_data": "Cape userà la tua Email, il tuo Nome e Cognome, per ulteriori informazioni vedi la nostra ",
       "authorize_and_create": "Autorizza e Crea",
       "do_not_authorize_and_cancel": "Non autorizzo e annulla",
-      "error_message": "E' avvenuto un errore contattando CaPe!",
+      "error_message": "E' avvenuto un errore contattando Data model mapper!",
       "no_cape_account": "Spiacente! Nessun CaPe account associata alla tua mail!"
     }
   }
