save source/schema labels , curl and body generators updated

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -109,10 +109,10 @@
       "update_config" : "Update config",
       "transform" : "Transform",
       "mode" : "Mode",
-      "save_schema" : "Save schema",
-      "save_source" : "Save source",
-      "update_schema" : "Update schema",
-      "update_source" : "Update source",
+      "save_schema" : "Share schema between mapper records",
+      "save_source" : "Share source between mapper records",
+      "update_schema" : "Update shared schema",
+      "update_source" : "Update shared source",
       "create_new" : "Create new",
       "register" : "Register",
       "deregister": "Deregister",
