--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -109,10 +109,10 @@
       "update_config" : "Aggiorna configurazione",
       "transform" : "Trasforma",
       "mode" : "Modalità",
-      "save_schema" : "Salva schema",
-      "save_source" : "Salva sorgente",
-      "update_schema" : "Aggiorna schema",
-      "update_source" : "Aggiorna sorgente",
+      "save_schema" : "Condividi schema con gli altri mapper records",
+      "save_source" : "Condividi sorgente con gli altri mapper records",
+      "update_schema" : "Aggiorna schema condiviso",
+      "update_source" : "Aggiorna sorgente condiviso",
       "create_new" : "Crea nuovo",
       "register" : "Registra",
       "deregister": "Deregistra",
