download as geojson added

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -150,7 +150,8 @@
       "name" : "Name",
       "dataModel" : "Data model",
       "view_editor" : "View on editor",
-      "update": "Update"
+      "update": "Update",
+      "download_geojson":"Download geojson"
     }
   },
   "login": {
