path and icon color

--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -11,6 +11,7 @@
     "menu": {
       "home": "Home",
       "editor": "Mapper editor",
+      "landing": "Landing",
       "map_records": "File di mapping registrati"
     },
     "account": {
