--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -11,6 +11,7 @@
     "menu": {
       "home": "Home",
       "editor": "Mapper editor",
+      "landing": "Landing",
       "map_records" : "Mapper records"
     },
     "account": {
