--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -96,7 +96,9 @@
       "hide_error_details": "Hide error details",
       "delete":"Delete",
       "update_field_list" : "Update field list",
-      "generate_mapper" : "Generate mapper"
+      "generate_mapper" : "Generate mapper",
+      "back":"Back",
+      "next":"Next"
     },
     "mapperRecords": {
       "name": "Name",
