--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -94,33 +94,35 @@
       "path": "Posizione",
       "show_error_details": "Mostra dettagli errore",
       "hide_error_details": "Nascondi dettagli errore",
-      "delete":"Cancella",
-      "update_field_list" : "Aggiorna lista campi",
-      "generate_mapper" : "Genera mapper"
+      "delete": "Cancella",
+      "update_field_list": "Aggiorna lista campi",
+      "generate_mapper": "Genera mapper",
+      "back": "Indietro",
+      "next": "Avanti"
     },
     "mapperRecords": {
       "name": "Nome",
       "mapperRecordId": "ID adattatore",
-      "status" : "Stato",
-      "description" : "Descrizione",
+      "status": "Stato",
+      "description": "Descrizione",
       "validationErrors": "Ci sono degli errori di validazione nella descrizione dell'mapperRecord inserito."
     },
     "dmm": {
-      "reset_config" : "Reset configurazione",
-      "update_config" : "Aggiorna configurazione",
-      "transform" : "Trasforma",
-      "mode" : "Modalità",
-      "save_schema" : "Condividi schema con gli altri mapper records",
-      "save_source" : "Condividi sorgente con gli altri mapper records",
-      "update_schema" : "Aggiorna schema condiviso",
-      "update_source" : "Aggiorna sorgente condiviso",
-      "create_new" : "Crea nuovo",
-      "register" : "Registra",
+      "reset_config": "Reset configurazione",
+      "update_config": "Aggiorna configurazione",
+      "transform": "Trasforma",
+      "mode": "Modalità",
+      "save_schema": "Condividi schema con gli altri mapper records",
+      "save_source": "Condividi sorgente con gli altri mapper records",
+      "update_schema": "Aggiorna schema condiviso",
+      "update_source": "Aggiorna sorgente condiviso",
+      "create_new": "Crea nuovo",
+      "register": "Registra",
       "deregister": "Deregistra",
       "delete": "Cancella",
-      "details" : "Dettagli",
-      "status" : "Stato",
-      "actions" : "Azioni",
+      "details": "Dettagli",
+      "status": "Stato",
+      "actions": "Azioni",
       "add_record": "Aggiungi mapper",
       "record": "Mapper",
       "description": "Descrizione",
@@ -146,13 +148,13 @@
       "record_deleted_message": "Il mapper è stato cancellato correttamente!",
       "record_registered_message": "Il mapper è stato registrato correttamente!",
       "record_deregistered_message": "Il mapper è stato disabilitato correttamente!",
-      "info" : "Info",
-      "id" : "ID",
-      "name" : "Nome",
-      "dataModel" : "Data model",
-      "view_editor" : "Vedi nell'editor",
+      "info": "Info",
+      "id": "ID",
+      "name": "Nome",
+      "dataModel": "Data model",
+      "view_editor": "Vedi nell'editor",
       "update": "Aggiorna",
-      "download_geojson":"Download geojson"
+      "download_geojson": "Download geojson"
     }
   },
   "login": {
